--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -1,1 +1,11 @@
-task_2/css/main.css
+#count {
+    display: inline;
+    font-weight: bold;
+    margin: 0;
+}
+#logo {
+    height: 200px;
+    width: 200px;
+    background: url('../assets/holberton-logo.jpg');
+    background-size: 200px 200px;
+}
