--- a/0x00-Webpack/task_3/modules/header/header.css
+++ b/0x00-Webpack/task_3/modules/header/header.css
@@ -1,1 +1,6 @@
-header/header.css
+#logo {
+  width: 200px;
+  height: 200px;
+  background-image: url("../../assets/holberton-logo.jpg");
+  background-size: 200px 200px;
+}
